[1.6] Moved `contrib/dbd2propel` to a task and deleted `contrib/` (closes #882)
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.6@2155 a84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/build.xml
+++ b/generator/build.xml
@@ -206,6 +206,10 @@
 	<phing phingfile="build-propel.xml" target="old-sql"/>
 </target>
 
+<target name="dbd2propel" depends="configure">
+	<phing phingfile="build-propel.xml" target="dbd2propel"/>
+</target>
+
 <target name="graphviz" depends="configure">
 	<phing phingfile="build-propel.xml" target="graphviz"/>
 </target>
