--- a/generator/default.properties
+++ b/generator/default.properties
@@ -130,6 +130,7 @@ propel.migration.dir = ${propel.output.dir}/migrations
 
 propel.graph.dir = ${propel.output.dir}/graph
 
+propel.dbd2propel.dir = ${propel.project.dir}/dbd
 
 # -------------------------------------------------------------------
 #
@@ -153,6 +154,8 @@ propel.buildtime.conf.file = buildtime-conf.xml
 propel.schema.xsd.file = ${propel.home}/resources/xsd/database.xsd
 propel.schema.xsl.file = ${propel.home}/resources/xsl/database.xsl
 
+propel.dbd2propel.xsl.file = ${propel.home}/resources/xsl/dbd2propel.xsl
+
 # -------------------------------------------------------------------
 #
 #  I N C L U D E   A N D   E X C L U D E   S E T T I N G S
@@ -171,6 +174,7 @@ propel.schema.om.includes = *schema.xml
 propel.schema.om.excludes = id-table-schema.xml
 propel.schema.datadtd.includes = *schema.xml
 propel.schema.datadtd.excludes = id-table-schema.xml
+propel.dbd2propel.includes = *.xml
 
 # -------------------------------------------------------------------
 #
@@ -255,6 +259,16 @@ propel.reverse.parser.class = reverse.${propel.database}.${propel.database}Schem
 propel.mysql.tableType = MyISAM
 # Keyword used to specify table type. MYSQL < 5 should use TYPE instead
 propel.mysql.tableEngineKeyword = ENGINE
+
+# -------------------------------------------------------------------
+#
+#  D B D E S I G N E R   2   P R O P E L   S E T T I N G S
+#
+# -------------------------------------------------------------------
+
+# see propel.dbd2propel.dir defined in the DIRECTORIES section
+# see propel.dbd2propel.includes defined in the INCLUDES AND EXCLUDES section
+# see propel.dbd2propel.xsl.file defined in the DEFAULT FILE NAMES section
 
 # -------------------------------------------------------------------
 #
