[1.6] Preparing the 1.6.0BETA1 release
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.6@2161 a84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -16,7 +16,7 @@
 #
 # -------------------------------------------------------------------
 
-propel.version = 1.5.3-dev
+propel.version = 1.6.0-beta1
 
 propel.home = .
 
