[1.6] Fixed i18n behavior was not declared in default properties (refs #1216)
git-svn-id: http://propel.mirror.svn.symfony-project.com/branches/1.6@2165 a84bc4f6-26e8-416f-aa96-3cde13879fbb

--- a/generator/default.properties
+++ b/generator/default.properties
@@ -287,3 +287,4 @@ propel.behavior.concrete_inheritance.class = behavior.concrete_inheritance.Concr
 propel.behavior.query_cache.class = behavior.query_cache.QueryCacheBehavior
 propel.behavior.aggregate_column.class = behavior.aggregate_column.AggregateColumnBehavior
 propel.behavior.versionable.class = behavior.versionable.VersionableBehavior
+propel.behavior.i18n.class = behavior.i18n.I18nBehavior
